--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.example.duyufeng">
-
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
             android:name=".myApplication"
             android:allowBackup="true"
@@ -11,48 +11,57 @@
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
+                android:name=".EntityActivity"
+                android:label="@string/title_activity_entity"
+                android:parentActivityName=".SearchActivity"
+                android:theme="@style/AppTheme.NoActionBar">
+        </activity>
+        <activity
                 android:name=".MainActivity"
                 android:label="@string/app_name"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-                >
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
             <meta-data
                     android:name="android.app.searchable"
                     android:resource="@xml/searchable"
                     android:value=".SearchActivity"/>
-            <meta-data android:name="android.max_aspect" android:value="2.1" />
+            <meta-data
+                    android:name="android.max_aspect"
+                    android:value="2.1"/>
         </activity>
         <activity
                 android:name=".SearchActivity"
                 android:parentActivityName=".MainActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                     android:name="android.support.PARENT_ACTIVITY"
-                    android:value=".MainActivity" />
+                    android:value=".MainActivity"/>
             <!-- meta tag and intent filter go into results activity -->
             <meta-data
                     android:name="android.app.searchable"
-                    android:resource="@xml/searchable" />
+                    android:resource="@xml/searchable"/>
         </activity>
         <activity
                 android:name=".DetailNewsActivity"
                 android:parentActivityName=".MainActivity"
-                android:theme="@style/Theme.AppCompat.Light.NoActionBar" >
+                android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
+
         <provider
                 android:name=".MySuggestionProvider"
                 android:authorities="com.example.providers.MySuggestionProvider"
-                android:exported="false" />
+                android:exported="false"/>
     </application>
 
 </manifest>
